@@ -19,8 +19,8 @@ export(AE3, ab, allele.recode, a2g, asplot,
    invlogit, invnormal,
    KCC, k, klem, kin.morgan,
    LD22, LDkl, logit, log10p,
-   m2plem, makeped, masize, metap, metareg, mhtplot, mhtplot2, mht.control, mia, miamiplot, micombine,
-        mtdt, mtdt2, muvar, mvmeta,
+   METAL_forestplot, METAL_forest, m2plem, makeped, masize, metap, metareg, mhtplot, mhtplot2, mht.control,
+        mia, miamiplot, micombine, mtdt, mtdt2, muvar, mvmeta,
    PARn, pbsize, pbsize2, pedtodot, pfc, pfc.sim, pgc, plem2m, plot.hap.score, print.hap.score,
    qqfun, qqunif,
    read.ms.output, revhap, revhap.i, ReadGRM, ReadGRMBin, ReadGRMPLINK, ReadGRMPCA,
