@@ -846,3 +846,70 @@ circos.mhtplot <- function(data=mhtdata, glist = c("IRS1","SPRY2","FTO","GRIK3",
   circos.genomicLabels(ann, labels.column = 4, side = "inside")
   circos.clear()
 }
+
+METAL_forestplot <- function(tbl)
+{
+  tabletext <- cbind(c("Study",study,"Summary"),
+                       c("Effect",format(BETA,digits=3),format(tbl[i,"Effect"],digits=3)),
+                       c("SE",format(SE,digits=3),format(tbl[i,"StdErr"],digits=3)),
+                       c("N",N,tbl[i,"N"]))
+  print(tabletext)
+  forestplot(tabletext,
+             c(NA,BETA,tbl[i,"Effect"]),
+             c(NA,BETA-1.96*SE,tbl[i,"Effect"]-1.96*tbl[i,"StdErr"]),
+             c(NA,BETA+1.96*SE,tbl[i,"Effect"]+1.96*tbl[i,"StdErr"]),
+             zero=0,
+             is.summary=c(TRUE,rep(FALSE,length(BETA)),TRUE),
+             boxsize=0.75,
+             col=meta.colors(box="royalblue",line="darkblue", summary="royalblue"))
+  title(title)
+  metaplot(BETA,SE,N,
+           labels=sprintf("%s (%.3f %.3f %.0f)",study,BETA,SE,N),
+           xlab="Effect distribution",ylab="",xlim=c(-1.5,1.5),
+           summn=tbl[i,"Effect"],sumse=tbl[i,"StdErr"],sumnn=tbl[i,"N"],
+           colors=meta.colors(box="red",lines="blue", zero="green", summary="red", text="black"))
+  title(title)
+}
+
+METAL_forest <- function(tbl,all,rsid)
+{
+  require(dplyr)
+  m <- within(nest_join(tbl,rsid),{rsid <- unlist(lapply(lapply(y,"[[",1),"[",1))})
+  isna <- with(m, is.na(rsid))
+  t <- within(m, {rsid[isna] <- MarkerName[isna]})
+  m <- within(nest_join(all,rsid),{rsid <- unlist(lapply(lapply(y,"[[",1),"[",1))})
+  isna <- with(m, is.na(rsid))
+  a <- within(m, {rsid[isna] <- MarkerName[isna]})
+  for(i in 1:nrow(tbl))
+  {
+     p <- tbl[i,"prot"]
+     m <- tbl[i,"MarkerName"]
+     d <- gsub("[?]","",tbl[i,"Direction"])
+     s <- unlist(strsplit(d,""))
+     f <- as.numeric(paste0(s,1))
+     A1 <- toupper(tbl[i,"Allele1"])
+     A2 <- toupper(tbl[i,"Allele2"])
+     print(paste0(i,"-",p,":",m))
+     with(subset(all,prot==p & MarkerName==m), {
+       e <- toupper(EFFECT_ALLELE)
+       r <- toupper(REFERENCE_ALLELE)
+       a1 <- a2 <- vector('character',length(e))
+       a1 <- e
+       a2 <- r
+       c <- rep(1,length(e))
+       j <- sapply(a1,'!=',A1)
+       a1[j] <- r[j]
+       a2[j] <- e[j]
+       c[j] <- -1
+       print(cbind(A1,A2,EFFECT_ALLELE,REFERENCE_ALLELE,a1,a2,format(BETA,digits=3),format(BETA*c,digits=3)))
+       BETA <- BETA * c
+       title <- sprintf("%s [%s (%s) (%s/%s) N=%.0f]",p,m,t[i,"rsid"],A1,A2,tbl[i,"N"])
+       require(meta)
+       mg <- metagen(BETA,SE,sprintf("%s (%.0f)",study,N),title=title)
+       forest(mg,colgap.forest.left = "1cm")
+       require(grid)
+       grid.text(title,0.5,0.9)
+#      METAL_forestplot(tbl)
+     })
+  }
+}
