@@ -1,6 +1,7 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.1-23
+23-05-2019	Suggest dplyr, forestplot, meta and add METAL_forestplot, METAL_meta
 10-05-2019	Add return total signals from cis.vs.trans.classification
 08-05-2019	Add column and row totals for cis.vs.trans.classification
 02-05-2019	Change circos.cis.vs.trans.plot so the chords are directional and two-coloured
